--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 
 <body>
 
+
+
+    <!-- ---------------- Main Banner ---------------- -->
+
+
+
     <header>
         <div class="container">
 
@@ -36,6 +42,12 @@
     </header>
 
     <main>
+
+
+
+
+
+        <!-- ----------- featured-section ------------- -->
 
         <section class="featured-section">
 
@@ -75,6 +87,29 @@
 
 
         </section>
+
+
+        <!-- ------------ Sale offer --------------- -->
+
+
+        <section class="sale-offer">
+
+            <div class="sale-offer-heading">
+
+                <h3>Hot Deal ! Sale Up To 25% <span class="highlighter">Off</span></h3>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page
+                    when looking at its layout.</p>
+                <button class="primary-btn"> Sign Up</button>
+            </div>
+
+            <div class="sale-offer-img">
+                <img src="images/saleoffer.png" alt="">
+            </div>
+
+        </section>
+
+
+
 
     </main>
 
