--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="deal-texts">
 
                     <h3> Get The Latest Deals </h3>
-                    <p>Get The Latest Deals</p>
+                    <p>$30 coupon for first shopping</p>
 
                     <div class="deal-button">
 
@@ -174,6 +174,13 @@
     </main>
 
     <footer>
+
+        <div class="shop-info">
+            
+            <h2> <span class="highlighter">Flower</span>Shop</h2>
+            <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            <p>@2020-2023, FlowerShop.com. All rights reserved. </p>
+        </div>
 
     </footer>
 </body>
