Added box shadow and fixed font problems

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
-</head>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fasthand&family=Indie+Flower&family=Open+Sans:wght@300&display=swap"
+        rel="stylesheet">
 
 <body>
 
@@ -173,12 +178,16 @@
 
     </main>
 
+
+            <!----------------------- Footer----------------- -->
+
     <footer>
 
         <div class="shop-info">
-            
+
             <h2> <span class="highlighter">Flower</span>Shop</h2>
-            <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page
+                when looking at its layout.</p>
             <p>@2020-2023, FlowerShop.com. All rights reserved. </p>
         </div>
 
