Parallax Added and the final push

--- a/index.html
+++ b/index.html
@@ -113,6 +113,31 @@
 
         </section>
 
+
+        <!-- In this area i am doing the bonus part. PARALLAX by just css. Permission Granted by Some respected member of Support session. -->
+
+
+
+        <section class="send-flowers">
+
+            <div class="parallax"> 
+
+
+                <div class="send-flowers"> 
+
+                    <h4>In this <span class="highlighter"> Valentine's </span> day dont miss your chance. <br> Send her flowers..</h4>
+                    <button class="primary-btn"> Pick A Location </button>
+
+                </div>
+
+            </div>
+
+        </section>
+
+
+
+
+
         <!-- ------------------- Socials ------------------------ -->
 
 
