--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="card-common card1">
 
                     <img src="images/f1.png" alt="">
-                    <p>Saharon Ful</p>
+                    <p class="highlighter">Lavender</p>
 
                 </div>
 
@@ -77,7 +77,7 @@
                 <div class="card-common card2">
 
                     <img src="images/f2.png" alt="">
-                    <p>Saharon Ful</p>
+                    <p class="highlighter">Daisy</p>
 
                 </div>
 
@@ -85,7 +85,7 @@
                 <div class="card-common card3">
 
                     <img src="images/f3.png" alt="">
-                    <p>Saharon Ful</p>
+                    <p class="highlighter">Jasmine</p>
 
                 </div>
             </div>
